// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Summary with expenses correctly 1`] = `
<div>
  <h1>
    Expenses Summary
  </h1>
  <p>
    Viewing 
    3
     totalling 
    USD$1,141.95 
  </p>
</div>
`;

exports[`should render Summary with no expenses correctly 1`] = `
<div>
  <h1>
    Expenses Summary
  </h1>
  <p>
    No summary
  </p>
</div>
`;
